Implementação de icone, botão de reset e contador de tamanho

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 </head>
 
 <body>
-    <h1>SNAKE GAME!</h1>
+    <div>
+        <img src="./img/snake-icon.png" alt="">
+    </div>
+
+    <p id="titulo">SNAKE GAME!</p>
+
+    <button onclick="reset()">RESET GAME</button>
     <canvas id="snake" width="512" height="512"></canvas>
+    <footer></footer>
 </body>
 
 </html>
